# Plankton

./: .gitignore  CHANGELOG.md  README.md  convert_all.bash
plankton/: CMakeLists.txt  package.xml
plankton_utils/: CMakeLists.txt  package.xml
plankton_utils/src/: globalSimTime.cpp  param_handler.py  time.py
plankton_utils/src/plankton_utils/: __init__.py  param_helper.py  time.py
plankton_utils/test/: test_param_helper.py  test_time.py
uuv_assistants/: CMakeLists.txt  package.xml
uuv_assistants/launch/: message_to_tf.launch  publish_body_sname.launch  publish_footprints.launch  publish_vehicle_footprint.launch  publish_world_ned_frame.launch  set_simulation_timer.launch  unpause_simulation.launch
uuv_assistants/scripts/: create_control_package  create_new_robot_model  create_thruster_manager_configuration  publish_footprints.py  publish_vehicle_footprint.py  publish_world_models.py  set_simulation_timer.py  unpause_simulation.py
uuv_assistants/src/: message_to_tf.cc  message_to_tf.cpp
uuv_assistants/templates/control/: TAM.yaml  pos_pid_control.yaml  position_hold_launch.xml  thruster_manager.yaml  thruster_manager_launch.xml  vel_pid_control.yaml
uuv_control/uuv_auv_control_allocator/: CMakeLists.txt  package.xml  setup.py
uuv_control/uuv_auv_control_allocator/config/: actuator_manager.yaml
uuv_control/uuv_auv_control_allocator/launch/: start_control_allocator.launch  start_control_allocator.launch.py
uuv_control/uuv_auv_control_allocator/msg/: AUVCommand.msg
uuv_control/uuv_auv_control_allocator/scripts/: control_allocator
uuv_control/uuv_control_cascaded_pids/: CMakeLists.txt  package.xml  setup.py
uuv_control/uuv_control_cascaded_pids/cfg/: AccelerationControl.cfg  PositionControl.cfg  VelocityControl.cfg
uuv_control/uuv_control_cascaded_pids/config/: joy_accel.yaml  joy_vel.yaml
uuv_control/uuv_control_cascaded_pids/launch/: joy_accel.launch  joy_velocity.launch  key_board_velocity.launch  position_hold.launch
uuv_control/uuv_control_cascaded_pids/scripts/: AccelerationControl.py  PositionControl.py  PositionControlUnderactuated.py  VelocityControl.py  acceleration_control.py  position_control.py  position_control_underactuated.py  velocity_control.py
uuv_control/uuv_control_msgs/: CMakeLists.txt  package.xml
uuv_control/uuv_control_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg  Waypoint.msg  WaypointSet.msg
uuv_control/uuv_control_msgs/srv/: AddWaypoint.srv  GetMBSMControllerParams.srv  GetPIDParams.srv  GetSMControllerParams.srv  GetWaypoints.srv  GoTo.srv  GoToIncremental.srv  Hold.srv  InitCircularTrajectory.srv  InitHelicalTrajectory.srv  InitRectTrajectory.srv  InitWaypointSet.srv  InitWaypointsFromFile.srv  IsRunningTrajectory.srv  SetMBSMControllerParams.srv  SetPIDParams.srv  SetSMControllerParams.srv
uuv_control/uuv_control_utils/: CMakeLists.txt  package.xml
uuv_control/uuv_control_utils/config/: example_disturbances.yaml  example_waypoints.yaml
uuv_control/uuv_control_utils/launch/: apply_body_wrench.launch  apply_link_wrench.launch  send_waypoints_file.launch  set_gm_current_perturbation.launch  set_scalar_parameter.launch  set_thruster_output_efficiency.launch  set_thruster_state.launch  set_timed_current_perturbation.launch  start_circular_trajectory.launch  start_disturbance_manager.launch  start_helical_trajectory.launch
uuv_control/uuv_control_utils/scripts/: apply_body_wrench.py  apply_link_wrench.py  disturbance_manager.py  send_waypoint_file.py  set_gm_current_perturbation.py  set_scalar_parameter.py  set_thruster_output_efficiency.py  set_thruster_state.py  set_timed_current_perturbation.py  start_circular_trajectory.py  start_helical_trajectory.py  time_utils.py  trajectory_marker_publisher.py
uuv_control/uuv_thruster_manager/: CMakeLists.txt  package.xml  setup.py
uuv_control/uuv_trajectory_control/: CMakeLists.txt  package.xml
uuv_descriptions/: CMakeLists.txt  package.xml
uuv_descriptions/launch/: message_to_tf.launch  upload_rexrov.launch  upload_rexrov_default.launch  upload_rexrov_default.launch.py  upload_rexrov_default_noisy_pose.launch  upload_rexrov_oberon4.launch  upload_rexrov_oberon7.launch  upload_rexrov_oberon_arms.launch
uuv_descriptions/robots/: rexrov_default.xacro  rexrov_default_noisy_pose.xacro  rexrov_oberon4.xacro  rexrov_oberon7.xacro  rexrov_oberon_arms.xacro  rexrov_sonar.xacro
uuv_descriptions/scripts/: spawn_model
uuv_descriptions/test/: test_urdf_files.py
uuv_descriptions/urdf/: common.urdf.xacro  rexrov.gazebo.xacro  rexrov_actuators.xacro  rexrov_base.xacro  rexrov_sensors.xacro
uuv_gazebo_plugins/uuv_gazebo_plugins/: CMakeLists.txt  package.xml
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/: CMakeLists.txt  package.xml
uuv_gazebo_plugins/uuv_gazebo_ros_plugins_msgs/: CMakeLists.txt  package.xml
uuv_gazebo_worlds/: CMakeLists.txt  package.xml
uuv_gazebo_worlds/config/: auv_underwater_world.yaml  auv_underwater_world_mod.yaml  empty_uw_world.yaml  herkules_ship_wreck.yaml  lake.yaml  mangalia.yaml  munkholmen.yaml  ocean_waves.yaml
uuv_gazebo_worlds/launch/: auv_underwater_world.launch  auv_underwater_world_mod.launch  empty_underwater_world.launch  herkules_ship_wreck.launch  lake.launch  mangalia.launch  mangalia_manipulation.launch  munkholmen.launch  ocean_waves.launch  rov_bop_panel.launch  subsea_bop_panel.launch
uuv_gazebo_worlds/worlds/: auv_underwater_world.world  auv_underwater_world_mod.world  empty_underwater.world  herkules_ship_wreck.world  lake.world  mangalia.world  mangalia_manipulation.world  munkholmen.world  ocean_waves.world  subsea_bop_panel.world  underwater_heightmap.world
uuv_sensor_plugins/uuv_sensor_ros_plugins/: CMakeLists.txt  package.xml
uuv_sensor_plugins/uuv_sensor_ros_plugins_msgs/: CMakeLists.txt  package.xml
uuv_simulator/: CMakeLists.txt  package.xml
uuv_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
uuv_teleop/launch/: finned_uuv_teleop.launch  uuv_keyboard_teleop.launch  uuv_teleop.launch
uuv_teleop/scripts/: finned_uuv_teleop.py  vehicle_keyboard_teleop.py  vehicle_teleop.py
(+326 files in other folders)
