<?xml version='1.0' encoding='utf-8'?>
<package format="3">
    <name>plankton</name>
    <version>0.5.0</version>
    <description>Open source simulator for maritime robotics research</description>

    <author email="loic@liquid-tech.ai">Loïc Mougeolle</author>
    <author email="jean-philip@liquid-tech.ai">Jean-Philip Royer</author>

    <maintainer email="loic@liquid-tech.ai">Loic Mougeolle</maintainer>
    <maintainer email="jean-philip@liquid-tech.ai">Jean-Philip Royer</maintainer>

    <license>Apache-2.0</license>

    <url type="documentation">https://uuvsimulator.github.io/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>plankton_utils</exec_depend>
    <exec_depend>uuv_simulator</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
