<?xml version='1.0' encoding='utf-8'?>
<package format="3">
    <name>plankton</name>
    <version>0.6.1</version>
    <description>Open source simulator for maritime robotics research</description>

    <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>
    <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>

    <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>
    <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>

    <license>Apache-2.0</license>

    <url type="documentation">https://github.com/Liquid-ai/Plankton/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>plankton_utils</exec_depend>
    <exec_depend>uuv_simulator</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
