<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plankton_utils</name>
  
    <version>0.6.1</version>
    <description>A collection of functions to help interacting with ROS 2 API</description>

    <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
    <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>

    <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>
    <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>


    <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
