<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>uuv_assistants</name>
  <version>0.6.13</version>
  <description>Tools and utilities to monitor and analyze the simulation</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
