<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>uuv_assistants</name>
  <version>0.5.0</version>
  <description>Tools and utilities to monitor and analyze the simulation</description>

    <author email="loic@liquid-tech.ai">Loïc Mougeolle</author>
    <author email="jean-philip@liquid-tech.ai">Jean-Philip Royer</author>

    <maintainer email="loic@liquid-tech.ai">Loïc Mougeolle</maintainer>
    <maintainer email="jean-philip@liquid-tech.ai">Jean-Philip Royer</maintainer>

    <license>Apache-2.0</license>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!--TODO Check the dependencies-->
  <exec_depend>rclpy</exec_depend>
  <!-- <exec_depend>ros2topic</exec_depend> -->
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend> <!-- check -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
