<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_assistants</name>
  <version>0.6.1</version>
  <description>Tools and utilities to monitor and analyze the simulation</description>

    <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>
    <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>

    <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
    <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>
  
    <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
    <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
    <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

    <license>Apache-2.0</license>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!--TODO Check the dependencies-->
  <exec_depend>rclpy</exec_depend>
  <!-- <exec_depend>ros2topic</exec_depend> -->
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>plankton_utils</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
