<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_descriptions</name>
  <version>0.6.1</version>
  <description>The uuv_descriptions package</description>

  <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>
  <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>

  <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
  <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>plankton_utils</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend> 
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>xacro</test_depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
