<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>uuv_gazebo_worlds</name>
  <version>0.6.13</version>
  <description>The uuv_gazebo_worlds package</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
