<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>uuv_auv_control_allocator</name>
  <version>0.6.13</version>
  <description>Optimal allocation of forces and torques to thruster and fins of AUVs</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
