<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_auv_control_allocator</name>
  <version>0.5.0</version>
  <description>Optimal allocation of forces and torques to thruster and fins of AUVs</description>

    <author email="loic@liquid-tech.ai">Loïc Mougeolle</author>
    <author email="jean-philip@liquid-tech.ai">Jean-Philip Royer</author>

    <maintainer email="loic@liquid-tech.ai">Loic Mougeolle</maintainer>
    <maintainer email="jean-philip@liquid-tech.ai">Jean-Philip Royer</maintainer>

    <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- not needed anymore -->
  <!--<exec_depend>message_runtime</exec_depend>-->

  <!-- build or buildtool ? -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
