<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_auv_control_allocator</name>
  <version>0.6.1</version>
  <description>Optimal allocation of forces and torques to thruster and fins of AUVs</description>

    <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>
    <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>

    <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
    <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>
  
    <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

    <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- build or buildtool ? -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>plankton_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
