<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>uuv_control_cascaded_pid</name>
  <version>0.5.0</version>
  <description>A cascade of PID controllers for acceleration, velocity, and position control.</description>

    <author email="loic@liquid-tech.ai">Loïc Mougeolle</author>
    <author email="jean-philip@liquid-tech.ai">Jean-Philip Royer</author>

    <maintainer email="loic@liquid-tech.ai">Loic Mougeolle</maintainer>
    <maintainer email="jean-philip@liquid-tech.ai">Jean-Philip Royer</maintainer>


  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>dynamic_reconfigure</depend> -->

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <!-- <exec_depend>tf</exec_depend> -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-numpy</exec_depend>  
  <exec_depend>plankton_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
