<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_control_cascaded_pids</name>
  <version>0.6.1</version>
  <description>A cascade of PID controllers for acceleration, velocity, and position control.</description>

    <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>
    <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>

    <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
    <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>
  
    <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
    <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
    <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>  
  <exec_depend>plankton_utils</exec_depend> 
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
